...
    <string name="optionsTab">Options</string>

    <!-- Strings for error messages -->
    <string name="error_email">Email required</string>

    <!-- Strings for toast messages -->
    <string name="toast_emailSent">Email sent</string>

    <!-- Strings related to question activity -->
    <string name="submitAnswer">Submit Answer</string>
    <string name="showHint">Show Hint</string>
    <string name="nextQuestion">Next Question</string>
    <string name="challengeCompleted">Challenge Completed!</string>
...
